release: 2.6.0